--- a/survey_form.html
+++ b/survey_form.html
@@ -6,46 +6,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact_tracing_form</title>
     <link rel="stylesheet" href="survey_form.css">
+    <script src="survey_form.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
-    <main class="main flexStyle">
+    <main class="main">
+        <section class="design"></section>
 
         <section class="title">
-            <h2>Contract Tracing Form</h2>
-            <p>Hi there! Please answer a few questions to help us<br>
-                maintain a safe environment for everyone.</p>
+            <div class="titleDesign"></div>
+            <h2 class="titleHeader">Contact Tracing Form</h2>
+            <p class="titleBody">Hi there! Please answer a few questions to help us maintain a safe environment for everyone.</p>
+            <span class="alert">* Required</span>
         </section>
 
         <section class="form">
-            <label>Please input your Full Name:</label>
-                <input type="text" value="Your answer">
-            <label>Please input your Email Address:</label>
-                <input type="email" value="Your answer">
-            <label>Mobile/Phone Number (ex. +63912-345-678):</label>
-                <input type="number" value="Your answer">
-            <label>Complete Current Address<br>
-                (House No., St., Brgy., Municipality/City, Province):</label>
-                    <input type="text" value="Your answer">
+            <label>Please input your Full Name: <span class="red">*</span></label>
+            <input type="text" value="Your answer">
         </section>
 
-        <section>
-            <h2>Thank you!</h2>
-            <p>I herby authorize Janelle & Alvin's Wedding to collect and process<br>
-                the data indicated herin for the purpose of contact tracing<br>
-                effecting control of the COVID-19 transmission. I understand<br>
-                that my personal information is protected by RA 10173 or the<br>
-                Data Privacy Act of 2012 and that this form will be destroyed<br>
-                after 30 days from the date of accomplishment, following the<br>
+        <section class="form">
+            <label>Please input your Email Address: <span class="red">*</span></label>
+            <input type="email" value="Your answer">
+        </section>
+
+        <section class="form">
+            <label>Mobile/Phone Number (ex. +63912-345-678): <span class="red">*</span></label>
+            <input type="number" value="Your answer">
+        </section>
+
+        <section class="form">
+            <label>Complete Current Address (House No., St., Brgy., Municipality/City, Province): <span class="red">*</span></label>
+            <input type="text" value="Your answer">
+        </section>
+
+        <section class="form">
+            <label>Please input your Age: <span class="red">*</span></label>
+            <input type="number" min="18" max="65" value="Your answer">
+        </section>
+
+        <section class="form">
+            <label>Please select your gender: <span class="red">*</span></label>
+            <select>
+                <option>Male</option>
+                <option>Female</option>
+            </select>
+        </section>
+        
+        <section class="formLong">
+            <label>Have you been experiencing any of this symptoms?: (Check all that apply) <span class="red">*</span></label>
+            
+            <div class="checkboxCon">
+                <div class="checkbox">
+                    <input type="checkbox">
+                    <label>Fever</label>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox">
+                    <label>Dry cough</label>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox">
+                    <label>Tiredness</label>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox">
+                    <label>Loss of taste or smell</label>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox">
+                    <label>Shortness of breath</label>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox">
+                    <label>None of the above</label>
+                </div>
+            </div>
+        </section>
+
+        <section class="formMed">
+            <label>Any comments or suggestions? <span class="red">*</span></label>
+            <textarea rows="3" cols="20"></textarea>
+        </section>
+
+        <section class="footer">
+            <button type="submit" onclick="exit()">Submit</button>
+            <p class="footerNDA"> I herby authorize Janelle & Alvin's Wedding to collect and process
+                the data indicated herin for the purpose of contact tracing
+                effecting control of the COVID-19 transmission. I understand
+                that my personal information is protected by RA 10173 or the
+                Data Privacy Act of 2012 and that this form will be destroyed
+                after 30 days from the date of accomplishment, following the
                 National Archives of the Philippines protocol.<br>
-                <br>Please click on SUBMIT to forward your responses.<br></p>
+            <br>Please click on SUBMIT to forward your responses.<br>
+            <span class="red">Never submit passwords through this form.</span></p>
         </section>
-
-        <p>A copy of your response will be emailed to the address that you provided.</p>
-
-        <button>Submit</button>
-
-        <p>Never submit passwords through this form.</p>
-
     </main>
 </body>
 </html>
