--- a/survey_form.html
+++ b/survey_form.html
@@ -84,23 +84,23 @@
             </div>
         </section>
 
-        <section class="formMed">
+        <section class="form">
             <label>Any comments or suggestions? <span class="red">*</span></label>
-            <textarea rows="3" cols="20"></textarea>
+            <textarea rows="1" cols="30"></textarea>
         </section>
 
         <section class="footer">
             <button type="submit" onclick="exit()">Submit</button>
             <p class="footerNDA">
-                I herby authorize Janelle & Alvin's Wedding to collect and process
-                the data indicated herin for the purpose of contact tracing
-                effecting control of the COVID-19 transmission. I understand
-                that my personal information is protected by RA 10173 or the
-                Data Privacy Act of 2012 and that this form will be destroyed
-                after 30 days from the date of accomplishment, following the
-                National Archives of the Philippines protocol.<br>
-                <br>Please click on SUBMIT to forward your responses.<br>
-                <span class="red">Never submit passwords through this form.</span></p>
+            I herby authorize Janelle & Alvin's Wedding to collect and process
+            the data indicated herin for the purpose of contact tracing
+            effecting control of the COVID-19 transmission. I understand
+            that my personal information is protected by RA 10173 or the
+            Data Privacy Act of 2012 and that this form will be destroyed
+            after 30 days from the date of accomplishment, following the
+            National Archives of the Philippines protocol.<br>
+            <br>Please click on SUBMIT to forward your responses.<br>
+            <span class="reminder red">Never submit passwords through this form.</span></p>
         </section>
 
     </main>
