--- a/survey_form_page_2.html
+++ b/survey_form_page_2.html
@@ -12,7 +12,7 @@
 <body>
     <main class="pageTwo">
         Thank you for your response!
-        <button type="submit" class="register" onclick="register()">Register</button>
+        <button type="submit" onclick="register()">Register</button>
     </main>
 </body>
 </html>
