--- a/survey-form.html
+++ b/survey-form.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact_tracing_form</title>
-    <link rel="stylesheet" href="survey_form.css">
-    <script src="survey_form.js" defer></script>
+    <link rel="stylesheet" href="survey-form.css">
+    <script src="survey-form.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@200&display=swap" rel="stylesheet">
 </head>
 <body>
